--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,20 @@ body {
 #filtCart {
   background-color: #F8F8F8 !important;
 }
+
+/* .zoom {
+  width: 350px;
+    height: 200px;
+
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  -ms-transition: all .2s ease-in-out;
+}
+
+.transition {
+  -webkit-transform: scale(1.8); 
+  -moz-transform: scale(1.8);
+  -o-transform: scale(1.8);
+  transform: scale(1.8);
+} */
