--- a/src/components/css/Login.css
+++ b/src/components/css/Login.css
@@ -145,6 +145,35 @@
   box-shadow: 0px 0px 20px 10px rgba(255, 0, 0, 0.5);
 }
 
+.register{
+  display: grid;
+  place-items: center;
+  margin: 20px;
+}
+
+.btn-register{
+  width: 100%;
+  background-color: #000000;
+  color: #ffffff;
+  font-size: 1.2em;
+  letter-spacing: 0.1em;
+  font-weight: 500;
+  margin-top: 15px;
+  padding: 10px 30px;
+  border-radius: 0.5em;
+  border: none;
+  text-decoration: none;
+  transition: 0.5s;
+}
+
+.btn-register:hover{
+  cursor: pointer;
+  letter-spacing: 0.3em;
+  background-color: rgb(177, 14, 14);
+  border: none;
+  box-shadow: 0px 0px 20px 10px rgba(255, 0, 0, 0.5);
+}
+
 @keyframes maquina {
   from {
     width: 100%;
