--- a/src/components/css/ActualizarClave.css
+++ b/src/components/css/ActualizarClave.css
@@ -1,4 +1,4 @@
-.mainbox {
+/* .mainbox {
   height: 80%;
   background-color: #1e8535;
   box-shadow: 0px 0px 20px 10px rgba(255, 255, 255, 0.5);
@@ -38,7 +38,7 @@
   background-color: #ffffff;
   border-left: 1px solid #000000;
   animation: maquina 3s infinite steps(25);
-}
+} */
 /* 
 form {
   margin-top: 50px;
