--- a/src/components/css/CrearUsuario.css
+++ b/src/components/css/CrearUsuario.css
@@ -1,7 +1,7 @@
-.flip-card {
+/* .flip-card {
   width: 100%;
   height: 100%;
-  perspective: 1000px; /* adds 3D effect */
+  perspective: 1000px; 
 }
 
 .flip-card-inner {
@@ -16,7 +16,7 @@
   transform-style: preserve-3d;
 }
 
-/* Flips the card when hovered */
+
 .flip-card.active .flip-card-inner {
   transform: rotateY(180deg);
 }
@@ -52,7 +52,6 @@
   transform: rotateY(180deg);
 }
 
-/*estilo de caja*/
 .mainbox {
   height: 80%;
   background-color: rgba(255, 255, 255, 0);
@@ -190,4 +189,4 @@
     width: 100%;
     background-color: rgb(177, 14, 14);
   }
-}
+} */
