--- a/src/components/css/Login.css
+++ b/src/components/css/Login.css
@@ -1,4 +1,4 @@
-.flip-card {
+/* .flip-card {
   width: 100%;
   height: 100%;
   perspective: 1000px; 
@@ -219,4 +219,4 @@
     width: 100%;
     background-color: rgb(177, 14, 14);
   }
-}
+} */
